@@ -4,6 +4,7 @@ CHANGED: updated to the latest Hunter
 CHANGED: to disable tests & docs by default
 NEW: futoin::any copying support
 NEW: FTN3 ISpec and ISpecTools interfaces
+NEW: futoin::ExtError class with error info
 
 === 0.2.1 (2018-09-23) ===
 FIXED: missing optional construct()/destruct() in IMemPool::Allocator
